<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuizWalk</string>
    <string name="action_settings">Settings</string>
    <string name="username_login">Username/Email</string>
    <string name="title_activity_create_game">CreateGameActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="enter_your_question">Enter your question...</string>
    <string name="create_question">Create Question!</string>
    <string name="answer1">First Answer...</string>
    <string name="answer2">Second Answer...</string>
    <string name="answer3">Third Answer…</string>
    <string name="answer4">Fourth Answer…</string>
    <string name="empty"></string>
    <string name="right_answer">Right:</string>
    <string name="correct_answer">Correct:</string>
    <string name="correct_Answer">Correct Answer</string>
    <string name="password">Password</string>
    <string name="title_activity_temporary_proximity">TemporaryProximityActivity</string>
    <string name="title_activity_quiz_walk_manager">QuizWalkManagerActivity</string>
    <string name="title_activity_edit_quiz_walk">EditQuizWalkActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_edit_quiz_walk_game">EditQuizWalkGameActivity</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="menuButton_Settings">Settings</string>
    <string name="menuButton_StartGame">Start Game</string>
    <string name="menuButton_CreateGame">Create Game</string>
    <string name="menuButton_QuizWalks">QuizWalks</string>
    <string name="hello_world">Hello World!</string>
    <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="Register_new_user_string">Register new User:</string>
    <string name="create_user_string">Create User</string>
    <string name="login_text">Login</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="register"><u>Register!</u></string>
    <string name="registration_successful"> "Registration successful!" </string>
    <string name="wrong_password"><u> Wrong Password!</u></string>
    <string name="create_quizwalk">Create QuizWalk!</string>
    <string name="quiz_walk"><u> QuizWalk </u></string>
    <string name="title_activity_completed_quiz_walk">CompletedQuizWalkActivity</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Settings">Settings</string>
    <string name="username_settings">Username</string>
    <string name="password_settings">Password</string>
    <string name="logout_settings">Logout</string>
    <string name="about_settings">About</string>
    <string name="help_settings">Help</string>
    <string name="you_got">You have gained:</string>
    <string name="points_string">Points</string>
    <string name="save_settings">Save</string>
    <string name="please_provide_a_question_and_answers_string">Please provide a question with 4 answers.</string>
    <string name="correct_answer_prompt">Correct!</string>
    <string name="incorrect_answer_prompt">Wrong...</string>
    <string name="list_of_quizwalks_empty">the list of QuizWalkGames is empty</string>
    <string name="longpress_to_add_question">Longpress a location the add a question</string>
    <string name="question">question</string>
    <string name="question_created">Question Created!</string>
    <string name="quizwalk_created">QuizWalk Created!</string>
    <string name="name_quiz">Name your QuizWalk</string>
    <string name="cancel">Cancel</string>
    <string name="no_quizwalks">No QuizWalks available</string>
 	<string name="could_not_find_answer">"Could not find correct answer</string>   
 	<string name="saved">Saved!</string>
 	<string name="ok">OK</string>
    <string name="could_not_find_answer">"Could not find correct answer</string>
    <string name="saved">Saved!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="enter_a_name">Enter a name!</string>
    <string name="back_menu">Back to menu</string>
    <string name="logged_in"> Logged in!</string>

</resources>
