<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.98"
    android:background="@color/WhiteSmoke"
    android:padding="15dp"
    android:textColorHint="@color/LowaplhaPurple" >

    <EditText
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:alpha="0.9"
        android:background="@color/WhiteSmoke"
        android:ems="10"
        android:hint="@string/enter_your_question"
        android:textColorHint="@color/LowaplhaPurple"
        android:nextFocusDown="@+id/answer1" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/questionText"
        android:layout_below="@+id/questionText"
        android:alpha="0.9"
        android:background="@color/WhiteSmoke"
        android:padding="5dp" >

        <EditText
            android:id="@id/answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/correct_Answer"
            android:textColorHint="@color/LowaplhaPurple"
            android:nextFocusDown="@+id/answer2" />

        <EditText
            android:id="@id/answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/answer1"
            android:layout_below="@+id/answer1"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/answer2"
            android:textColorHint="@color/LowaplhaPurple"
            android:nextFocusDown="@+id/answer3" />

        <EditText
            android:id="@id/answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/answer2"
            android:layout_below="@+id/answer2"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/answer3"
            android:textColorHint="@color/LowaplhaPurple"
            android:nextFocusDown="@+id/answer4" />

        <EditText
            android:id="@id/answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/answer3"
            android:layout_below="@+id/answer3"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/answer4"
            android:textColorHint="@color/LowaplhaPurple" />

    </RelativeLayout>

    <Button
        android:id="@+id/button1"
        style="@style/ButtonBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentBottom="true"
        android:onClick="CreateQuestion"
        android:text="@string/create_question" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="26dp"
        android:text="@string/please_provide_a_question_and_answers_string"
        android:textColor="@color/red" 
        android:alpha="0"/>

</RelativeLayout>