<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LowaplhaPurple"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameMenuActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1"
        android:text="@string/menuButton_CreateGame"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic" 
         android:onClick="onButtonClick_CreateGame"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginTop="175dp"
        android:onClick="onButtonClick_StartGame"
        android:text="@string/menuButton_StartGame"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="15dp"
        android:background="@color/black_overlay"
        android:onClick="onButtonClick_QuizWalkManager"
        android:text="@string/menuButton_QuizWalks"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="22dp"
        android:background="@color/black_overlay"
        android:onClick="onButtonClick_Settings"
        android:text="@string/menuButton_Settings"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:src="@drawable/quiz_walk_big" />

</RelativeLayout>