<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/blurryquiz2"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Password"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Email"
        android:layout_marginBottom="90dp"
        android:onClick="Login"
        android:text="@string/login_text"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:typeface="sans" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Email"
        android:layout_alignRight="@+id/Email"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@android:string/unknownName"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Password"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:shadowColor="@android:color/white"
        android:text="@string/username_login"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/registerUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/Password"
        android:layout_below="@+id/Password"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:onClick="onClickRegisterUser"
        android:text="@string/register"
        android:textColor="@color/white"
  		 />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/registerUserText"
        android:layout_alignLeft="@+id/Password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/Red" />

 </RelativeLayout>